--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,3 +15,11 @@
   - id: prospector
     language: system
     exclude: '^(tests/)|(examples/)'
+
+- repo: local
+  hooks: 
+  - id: version-number
+    name: Check version numbers
+    entry: python ./.travis-data/check_version.py
+    language: system
+    files: '^(setup.json)|(aiida_gudhi/__init__.py)'
